User defined download threads number